wip recored attendances
